feat: add logout api
