# middleware/validateTokenHandler.js
@@ -1,10 +1,12 @@
 import dotenv from 'dotenv';
 import {
+  blackListedTokenMessage,
   ForbiddenErrorMessage,
   TokenErrorMessage,
 } from '../constants/errorMessages.js';
 import { errorResponse } from '../utils/responseHandler.js';
 import { statusCodes } from '../constants/statusCodeMessages.js';
+import { isTokenBlackListed } from '../utils/tokenManager.js';
 dotenv.config();
 
 export const isAuthenticateUser = async (req, res, next) => {
@@ -20,6 +22,15 @@ export const isAuthenticateUser = async (req, res, next) => {
   }
 
   const token = authHeader.split(' ')[1];
+
+  if (isTokenBlackListed(token)) {
+    return errorResponse(
+      res,
+      new Error('Token is blacklisted'),
+      blackListedTokenMessage,
+      statusCodes.UNAUTHORIZED,
+    );
+  }
 
   req.token = token;
   next();
