# middleware/verifyTokenHandler.js
@@ -2,11 +2,13 @@ import jwt from 'jsonwebtoken';
 import logger from '../logger.js';
 import dotenv from 'dotenv';
 import {
+  blackListedTokenMessage,
   InvalidTokenErrorMessage,
   ValidationErrorMessage,
 } from '../constants/errorMessages.js';
 import { errorResponse } from '../utils/responseHandler.js';
 import { statusCodes } from '../constants/statusCodeMessages.js';
+import { isTokenBlackListed } from '../utils/tokenManager.js';
 dotenv.config();
 
 export const verifyToken = (req, res, next) => {
@@ -18,6 +20,15 @@ export const verifyToken = (req, res, next) => {
       new Error(ValidationErrorMessage),
       InvalidTokenErrorMessage,
       statusCodes.VALIDATION_ERROR,
+    );
+  }
+
+  if (isTokenBlackListed(token)) {
+    return errorResponse(
+      res,
+      new Error('Token is blacklisted'),
+      blackListedTokenMessage,
+      statusCodes.UNAUTHORIZED,
     );
   }
 
