# modules/user/user.route.js
@@ -1,6 +1,7 @@
 import express from 'express';
 import {
   loginUser,
+  logoutUser,
   registerUser,
   requestOTP,
   resetPassword,
@@ -23,5 +24,5 @@ userRoute.route('/verify-otp').post(isAuthenticateUser, verifyToken, verifyOTP);
 userRoute
   .route('/reset-password')
   .put(isAuthenticateUser, verifyToken, resetPassword);
-
+userRoute.route('/logout').post(isAuthenticateUser, verifyToken, logoutUser);
 export default userRoute;
